<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="mapbox_public_access_token">pk.eyJ1IjoieW9ib2l0ZWwiLCJhIjoiY2ttdHh4a3ZpMHR3bjJ2cG84cnJ6cDN4dyJ9.6m50as524keFgGDVW1W2Xg</string>
    <string name="mapbox_error">Mapbox geocoding fail</string>
    <string name="internet_needed">You must be connected to internet</string>
    <string name="not_sold_yet">Not sold yet</string>
    <string name="cant_be_empty">fields can\'t be empty</string>
    <string name="no_estates_found">No estates found</string>
    <string name="available">Available</string>
    <string name="sold">Sold</string>
    <string name="apartment">Apartment</string>
    <string name="loft">Loft</string>
    <string name="house">House</string>
    <string name="edit_estate">Edit Estate</string>
    <string name="new_estate">New Estate</string>
    <string name="notification_title">Informations</string>
    <string name="notification_estate_added">New estate successfully added</string>
    <string name="notification_estate_updated">Estate successfully updated</string>
    <string name="specify_type">Please specify a type</string>
    <string name="specify_price">Please specify a price</string>
    <string name="specify_surface">Please specify a surface</string>
    <string name="specify_rooms_count">Please specify rooms count</string>
    <string name="specify_description">Please specify description</string>
    <string name="specify_address">Please specify address</string>
    <string name="specify_status">Please specify status</string>
    <string name="specify_solddate_or_change_status">Please specify the sold date or change status</string>
    <string name="specify_agent">Please specify an agent</string>
    <string name="specify_estate_available_date">Please specify the estate\'s available date</string>
    <string name="missing_photos">Please add at least one photo</string>
    <string name="search_results">Search Results :</string>
    <string name="loan_amount">Loan amount</string>
    <string name="loan_term_years">Loan term (years)</string>
    <string name="interest_rate">Interest rate (%)</string>
    <string name="result">Result</string>
    <string name="monthly_pay">Monthly pay</string>
    <string name="total_interest">Total interest</string>
    <string name="max_date">Max Date</string>
    <string name="min_date">Min Date</string>
    <string name="posted_date_between">Posted date between</string>
    <string name="rooms_min_max">Rooms (min-max)</string>
    <string name="price_min_max">Price (min-max)</string>
    <string name="surface_m2_min_max">Surface m2 (min-max)</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="estate">Estate</string>
    <string name="price">Price ($)</string>
    <string name="surface_m2">Surface (m2)</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="street_city_code_country">Street, City, Code, Country</string>
    <string name="nearby">Nearby</string>
    <string name="schools">Schools</string>
    <string name="shops">Shops</string>
    <string name="parks">Parks</string>
    <string name="hospitals">Hospitals</string>
    <string name="informations">Informations</string>
    <string name="agent_name">Agent name</string>
    <string name="available_date">Available Date</string>
    <string name="sold_date">Sold Date</string>
    <string name="add_photos">Add photos</string>
    <string name="location">Location</string>
    <string name="about">About</string>
    <string name="rooms">Rooms</string>
    <string name="no_estates_found_you_can_add_one_with_the_icon">No estates found. You can add one with the +icon</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="loan_simulator">Loan Simulator</string>
</resources>
